--- a/Quality/Quality/Areas/BulkFGT/Views/HeatTransferWash/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/HeatTransferWash/Index.cshtml
@@ -384,7 +384,7 @@
 
                                     <th style="width: 13vw;"><h4>Fabric Ref No.</h4></th>
                                     <th style="width: 13vw; "><h4>HT Ref No.</h4></th>
-                                    <th style="width: 5vw;"><h4>HT-Tempereture</h4></th>
+                                    <th style="width: 5vw;"><h4>HT-Temperature</h4></th>
                                     <th style="width: 6vw;"><h4>HT-Time(Sec)</h4></th>
                                     <th style="width: 6vw;"><h4>2nd HT-Time(Sec)</h4></th>
                                     <th style="width: 6vw; "><h4>HT-Pressure</h4></th>
