--- a/Quality/Quality/Areas/BulkFGT/Views/MockupOvenTest/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/MockupOvenTest/Index.cshtml
@@ -405,7 +405,7 @@
                                     <td colspan="6"><h5 style="font-weight: 900;">Testing Method</h5></td>
                                 </tr>
                                 <tr>
-                                    <td><h5>Tempereture (˚C)</h5></td>
+                                    <td><h5>Temperature (˚C)</h5></td>
                                     <td>
                                         @Html.TextBoxFor(o => o.TestTemperature, "", new { @type = "number", @class = "OnlyEdit", @step = "0.01" })
 
@@ -421,7 +421,7 @@
                                     <td colspan="6"><h5>Manufacturer Test Condition (For Heat Transfer)</h5></td>
                                 </tr>
                                 <tr>
-                                    <td colspan="2"><h5>Actual Plate Tempereture (˚C)</h5></td>
+                                    <td colspan="2"><h5>Actual Plate Temperature (˚C)</h5></td>
                                     <td>
                                         @Html.TextBoxFor(o => o.HTPlate, "", new { @type = "number", @class = "OnlyEdit", @step = "1" })
 
@@ -433,7 +433,7 @@
 
                                 </tr>
                                 <tr>
-                                    <td colspan="2"><h5>Actual Flim Tempereture (˚C)</h5></td>
+                                    <td colspan="2"><h5>Actual Flim Temperature (˚C)</h5></td>
                                     <td>
                                         @Html.TextBoxFor(o => o.HTFlim, "", new { @type = "number", @class = "OnlyEdit", @step = "1" })
 
