--- a/Quality/Quality/Areas/BulkFGT/Views/MockupWash/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/MockupWash/Index.cshtml
@@ -423,7 +423,7 @@
                                     <td colspan="6"><h5>Manufacturer Test Condition (For Heat Transfer)</h5></td>
                                 </tr>
                                 <tr>
-                                    <td colspan="2"><h5>Actual Plate Tempereture (˚C)</h5></td>
+                                    <td colspan="2"><h5>Actual Plate Temperature (˚C)</h5></td>
                                     <td>
                                         @Html.TextBoxFor(o => o.HTPlate, "", new { @type = "number", @class = "OnlyEdit", @step = "1" })
 
@@ -435,7 +435,7 @@
 
                                 </tr>
                                 <tr>
-                                    <td colspan="2"><h5>Actual Flim Tempereture (˚C)</h5></td>
+                                    <td colspan="2"><h5>Actual Flim Temperature (˚C)</h5></td>
                                     <td>
                                         @Html.TextBoxFor(o => o.HTFlim, "", new { @type = "number", @class = "OnlyEdit", @step = "1" })
 
