--- a/Quality/Quality/Areas/BulkFGT/Views/FabricOvenTest/Detail.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/FabricOvenTest/Detail.cshtml
@@ -763,6 +763,8 @@
             para += "&" + "Table=Oven";
             para += "&" + "BeforeColumn=TestBeforePicture";
             para += "&" + "AfterColumn=TestAfterPicture";
+            para += "&" + "TargetBeforeColumn=Main_TestBeforePicture";
+            para += "&" + "TargetAfterColumn=Main_TestAfterPicture";
             para += "&" + "PKey_1=POID";
             para += "&" + "PKey_2=TestNo";
             para += "&" + "PKey_1_Val=" + $('#Main_POID').val();
