--- a/Quality/Quality/Areas/BulkFGT/Views/AgingHydrolysisTest/Detail.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/AgingHydrolysisTest/Detail.cshtml
@@ -196,6 +196,9 @@
         z-index: 1001;
         opacity: .80;
     }
+    input, select, a, div {
+        font-size: 1rem;
+    }
 </style>
 
 <div class="main-content">
