ISP20230259 - 調整Final Inspection寄信內容

--- a/Quality/Quality/Areas/FinalInspection/Views/Query/Index.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Query/Index.cshtml
@@ -261,7 +261,7 @@
             "lengthChange": false,
             "filter": false,
             "paging": true,
-            "scrollY": "44%",
+            "scrollY": "50vh",
             "scrollCollapse": true,
             "scrollX": true,
             "autoWidth": false
