--- a/Quality/Quality/Areas/BulkFGT/Views/SearchList/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/SearchList/Index.cshtml
@@ -306,6 +306,16 @@
                                                 ReportNo = item.ReportNo,
                                             });
                                             break;
+                                        case string a when a.Contains("Phenolic Yellowing Test"):
+                                            link = Url.Action("IndexGet", "PhenolicYellowTest", new
+                                            {
+                                                ReportNo = item.ReportNo,
+                                                BrandID = item.BrandID,
+                                                SeasonID = item.SeasonID,
+                                                StyleID = item.StyleID,
+                                                Article = item.Article,
+                                            });
+                                            break;
                                         default:
                                             link = "#";
                                             break;
