--- a/Quality/Quality/Areas/BulkFGT/Views/PhenolicYellowTest/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/PhenolicYellowTest/Index.cshtml
@@ -579,7 +579,7 @@
                                         @Html.TextBoxFor(o => Model.DetailList[i].Roll, new { @class = "" })
                                     </div>
                                     <div class="DetailDataAreaItem1 colBody @rowName">
-                                        <select id="DetailList[@i]_Scale" name="DetailList[@i].Scale" class="CanEdit" onchange="ScaleChange(@i, this, 'Result', '@Model.DetailList[i].Scale')">
+                                        <select id="DetailList[@i]_Scale" name="DetailList[@i].Scale" class="CanEdit" onchange="ScaleChange(@i, this, 'Result', '4-5')">
                                             @foreach (var item in Model.Scale_Source)
                                             {
                                                 string selected = item.Value.Equals(Model.DetailList[i].Scale) ? "selected" : "";
@@ -886,6 +886,10 @@
             if (EditMode == false) {
                 return;
             }
+            if ($('#Main_OrderID').val() == '' || $('#Main_BrandID').val() == '' || $('#Main_SeasonID').val() == '' || $('#Main_StyleID').val() == '' || $('#Main_Article').val() == '') {
+                msg.WithError("SP#, Brand, Season ,Style and Article cannot be empty");
+                return false;
+            }
 
 
             $('.detailRowIdx').each(function (index, data) {
@@ -1047,6 +1051,7 @@
                         if (data.Result) {
                             msg.WithSuccesCheck("Success", function () {
                                 location.reload();
+                                $("#btnQuery").click();
                             });
                         }
                         else {
@@ -1072,7 +1077,7 @@
                     success: function (data) {
                         if (data.Result) {
                             msg.WithSuccesCheck("Success", function () {
-                                location.reload();
+                                $("#btnQuery").click();
                             });
                         }
                         else {
