--- a/Quality/Quality/Areas/BulkFGT/Views/DailyMoisture/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/DailyMoisture/Index.cshtml
@@ -406,6 +406,7 @@
                                     <th><h4>Point 3</h4></th>
                                     <th><h4>Point 4</h4></th>
                                     <th><h4>Point 5</h4></th>
+                                    <th><h4>Point 6</h4></th>
                                     <th><h4>Area</h4></th>
                                     <th><h4>Fabric</h4></th>
                                     <th><h4>Result</h4></th>
@@ -425,10 +426,10 @@
                                             <input idx='@i' type='hidden' />
                                             @Html.HiddenFor(o => Model.Details[i].ReportNo)
                                             @Html.HiddenFor(o => Model.Details[i].Ukey)
-                                            @Html.TextBoxFor(o => Model.Details[i].Point1, "", new { @class = "OnlyEdit", @step="0.01", @style = "width:85%;", onchange = "value=QtyCheck(value)", @type = "number" })
+                                            @Html.TextBoxFor(o => Model.Details[i].Point1, "", new { @class = "OnlyEdit", @step = "0.01", @style = "width:85%;", onchange = "value=QtyCheck(value)", @type = "number" })
                                         </td>
                                         <td>
-                                            @Html.TextBoxFor(o => Model.Details[i].Point2, "", new { @class = "OnlyEdit", @step = "0.01" ,@style = "width:85%;", onchange = "value=QtyCheck(value)", @type = "number" })
+                                            @Html.TextBoxFor(o => Model.Details[i].Point2, "", new { @class = "OnlyEdit", @step = "0.01", @style = "width:85%;", onchange = "value=QtyCheck(value)", @type = "number" })
                                         </td>
                                         <td>
                                             @Html.TextBoxFor(o => Model.Details[i].Point3, "", new { @class = "OnlyEdit", @step = "0.01", @style = "width:85%;", onchange = "value=QtyCheck(value)", @type = "number" })
@@ -439,6 +440,10 @@
                                         <td>
                                             @Html.TextBoxFor(o => Model.Details[i].Point5, "", new { @class = "OnlyEdit", @step = "0.01", @style = "width:85%;", onchange = "value=QtyCheck(value)", @type = "number" })
                                         </td>
+                                        <td>
+                                            @Html.TextBoxFor(o => Model.Details[i].Point6, "", new { @class = "OnlyEdit", @step = "0.01", @style = "width:85%;", onchange = "value=QtyCheck(value)", @type = "number" })
+                                        </td>
+
 
 
 
@@ -463,7 +468,7 @@
                                         </td>
                                         <td>
                                             @*@Html.TextBoxFor(o => Model.Details[i].Result, new { @class = $"{resultColor}", @readonly = "readonly" })*@
-                                            @Html.TextBox($@"Details_{i}__Result",r, new { @class = $"{resultColor}" , @readonly = "readonly" })
+                                            @Html.TextBox($@"Details_{i}__Result", r, new { @class = $"{resultColor}", @readonly = "readonly" })
                                         </td>
                                         <td>
                                             @Html.DisplayFor(o => Model.Details[i].LastEditName, new { @class = "OnlyEdit" })
