--- a/Quality/Quality/Areas/BulkFGT/Views/SalivaFastnessTest/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/SalivaFastnessTest/Index.cshtml
@@ -754,10 +754,11 @@
                                             @Model.DetailList[i].LastUpadate
                                         </div>
                                         <div class="DetailDataAreaItem1 colBody @rowName">
-                                            @if (!string.IsNullOrEmpty(Model.Main.ReportDateText))
+                                            @*@if (!string.IsNullOrEmpty(Model.Main.ReportDateText))
                                             {
                                                 <img class="detailDelete" src="~/Image/Icon/Delete.png" width="30" />
-                                            }
+                                            }*@
+                                            <img class="detailDelete" src="~/Image/Icon/Delete.png" width="30" />
                                         </div>
                                     }
                                 }
